--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<html>
+    <title></title>
+    <body>
+        <header>
+                <h1>це сайт про гру beamNG.Drive </h1>
+        </header>
 
+        <main>
+                <p>В цій грі ви можете тестувати фізику пошкодження різних автомобілів за допомогою фізики м'ягких тіл 
+                </p>
+
+                <img src="https://cdn.akamai.steamstatic.com/steam/apps/284160/capsule_616x353.jpg?t=1709017559">
+
+                <a href="https://store.steampowered.com/app/284160/BeamNGdrive/">тут можна купити гру
+                <a>більше про гру в цій грі багато різних автомобілів також іх можна завантажити з майстерні steam всі автомобілі дуже гарно зроблені і в них пропрацьований інтетер'єр також там Є багато різних мап і їх теж можна завантажити за майстерні steam </a>
+
+                
+        </main>
+
+        <footer>
+
+        </footer>
+    </body>
+</html>
