--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-    <title></title>
+    <title></title> <link rel="stylesheet"
+                        href="style CSS
     <body style="background-color:orange">
         <header>
                 <h1>це сайт про гру beamNG.Drive </h1>
