--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <title></title> <link rel="stylesheet"
-                        href="style CSS
-    <body style="background-color:orange">
+                        href="style CSS/>
+    <body>
         <header>
                 <h1>це сайт про гру beamNG.Drive </h1>
         </header>
