--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <title></title> <link rel="stylesheet"
-                        href="style CSS/>
+                        href="style.css/>
     <body>
         <header>
                 <h1>це сайт про гру beamNG.Drive </h1>
