--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-    <title></title> <link rel="stylesheet"
-                        href="style.css/>
+ <head>
+     <title></title>
+    <link rel="stylesheet"
+                        href="style.css"/>
+ </head>   
+    
     <body>
         <header>
                 <h1>це сайт про гру beamNG.Drive </h1>
