--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </main>
 
          <footer>
-            <a style="display:block; margin:auto" href="https://store.steampowered.com/app/284160/BeamNGdrive/">тут можна купити гру</a> 
-            <img src="http://beamng.com/styles/uix/uix/logo.png"/>
+            <a style="display:block; margin:auto" href=""></a> 
+            <img src=""/>
 
         </footer>
     </body>
