--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <p style="font-size:24px">Чотирикутником називається фігура, яка складається з чотирьох точок, які не лежать на одній прямій і з'єднані послідовно чотирма відрізками, які не перетинаються. Чотирикутники можуть бути опуклими і не опуклими.
                 </p>
 
-                <img src=""/>
+                <img src="https://www.google.com/imgres?q=%D0%B3%D0%B5%D0%BE%D0%BC%D0%B5%D1%82%D1%80%D1%96%D1%8F%20%D1%87%D0%BE%D1%82%D0%B8%D1%80%D0%B8%D0%BA%D1%83%D1%82%D0%BD%D0%B8%D0%BA%D0%B8&imgurl=https%3A%2F%2Fnaurok.com.ua%2Fuploads%2Ffiles%2F12307%2F59699%2F64122_images%2F2.jpg&imgrefurl=https%3A%2F%2Fnaurok.com.ua%2Fprezentaciya-chotirikutniki-8-klas-geometriya-59699.html&docid=Mbha7dLGftTGRM&tbnid=Zy-texc51i4KQM&vet=12ahUKEwixjsaIvuqJAxXJBdsEHTmhJ7MQM3oECGkQAA..i&w=700&h=525&hcb=2&ved=2ahUKEwixjsaIvuqJAxXJBdsEHTmhJ7MQM3oECGkQAA
+                 "/>
                 <img src=""/>
                 <img src=""/>               
                 <p style="font-size:24px"></p>
