--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <img src="
                  "/>
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstend-sg.com%2Fstendy-dlya-shkoly%2Fmatematika%2Fstend-po-geometrii-chetyrehugolniki&psig=AOvVaw2OZRuhd9NHxktqKS4O6Qxn&ust=1732177751325000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIjIuY-_6okDFQAAAAAdAAAAABAJ"/>
+                <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/5.jpg"/>
                 <img src=""/>               
                 <p style="font-size:24px"></p>
 
