--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <p style="font-size:24px">Чотирикутником називається фігура, яка складається з чотирьох точок, які не лежать на одній прямій і з'єднані послідовно чотирма відрізками, які не перетинаються. Чотирикутники можуть бути опуклими і не опуклими.
                 </p>
 
-                <img src="
+                <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/7.jpg
                  "/>
                 <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/5.jpg"/>
-                <img src=""/>               
+                <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/6.jpg"/>               
                 <p style="font-size:24px"></p>
 
                 
@@ -26,7 +26,7 @@
 
          <footer>
             <a style="display:block; margin:auto" href=""></a> 
-            <img src=""/>
+            <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/13.jpg"/>
 
         </footer>
     </body>
