--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
                 <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/7.jpg
                  "/>
                 <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/5.jpg"/>
-                <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/6.jpg"/>               
-                <p style="font-size:24px"></p>
+                <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/6.jpg"/>
+         <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/14.jpg">
+         <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/21.jpg">
+         <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/22.jpg">
+                <p style="font-size:24px">це проєктна робота на тему чотрикутники Котика Василя Учня 8-В класу</p>
 
                 
         </main>
