--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/6.jpg"/>
          <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/14.jpg">
          <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/21.jpg">
-         <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/22.jpg">
+         <img src="">
                 <p style="font-size:24px">це проєктна робота на тему чотрикутники Котика Василя Учня 8-В класу</p>
 
                 
         </main>
 
          <footer>
-            <a style="display:block; margin:auto" href=""></a> 
+            <a style="display:block; margin:auto" href="">vasilkotik5545 це мій нікнейм в TikTok</a> 
             <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/13.jpg"/>
 
         </footer>
