--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </main>
 
          <footer>
-            <a style="display:block; margin:auto" href="">vasilkotik5545 це мій нікнейм в TikTok</a> 
+            <a style="display:block; margin:auto" href="https://naurok.com.ua/prezentaciya-chotirikutniki-8-klas-geometriya-59699.html">Ось звідки я брав фото для сайту</a> 
             <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/13.jpg"/>
 
         </footer>
