--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/6.jpg"/>
          <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/14.jpg">
          <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/21.jpg">
-         <img src="">
+         <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/15.jpg">
                 <p style="font-size:24px">це проєктна робота на тему чотрикутники Котика Василя Учня 8-В класу</p>
 
                 
@@ -29,7 +29,7 @@
 
          <footer>
             <a style="display:block; margin:auto" href="https://naurok.com.ua/prezentaciya-chotirikutniki-8-klas-geometriya-59699.html">Ось звідки я брав фото для сайту</a> 
-            <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/13.jpg"/>
+            <img src="https://naurok.com.ua/"/>
 
         </footer>
     </body>
