--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
          <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/14.jpg">
          <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/21.jpg">
          <img src="https://naurok.com.ua/uploads/files/12307/59699/64122_images/15.jpg">
+         <p>Трикутники в евклідовій геометрії називають подібними, якщо вони є подібними фігурами. Тобто, їх кути відповідно рівні, а відповідні сторони є пропорційними.</p>
+         <p>Встановити подібність трикутників можна за допомогою однієї з трьох ознак:</p>
+
+<p>1) Перша ознака подібності трикутників (за двома кутами)</p>
+
+     <p>Якщо два кути одного трикутника відповідно дорівнюють двом кутам другого трикутника, то такі трикутники є подібними.</p>
+
+<p>2) Друга ознака подібності трикутників (за двома сторонами і кутом між ними)</p>
+
+     <p>Якщо дві сторони одного трикутника пропорційні двом сторонам другого трикутника і кути, утворені цими сторонами, рівні, то такі трикутники є подібними.</p>
+
+<p>3) Третя ознака подібності трикутників (за трьома сторонами)</p>
+
+     <p>Якщо три сторони одного трикутника пропорційні трьом сторонам другого трикутника, то такі трикутники є подібними.</p>
+         
                 <p style="font-size:24px">це проєктна робота на тему чотрикутники Котика Василя Учня 8-В класу</p>
 
                 
