--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 <p>3) Третя ознака подібності трикутників (за трьома сторонами)</p>
 
      <p>Якщо три сторони одного трикутника пропорційні трьом сторонам другого трикутника, то такі трикутники є подібними.</p>
-         
+       <p>Ось приклади подібних трикутників в реальному житті</p>
+         <img src="http://wiki.iteach.com.ua/%D0%A4%D0%B0%D0%B9%D0%BB:%D0%A2%D1%80%D0%B8%D0%BA%D1%83%D1%82%D0%BE%D1%86%D0%B5%D0%BD%D1%82%D1%80.jpg">
+         <img src="https://faktypro.com.ua/uploads/img-2/30-cikavih-faktiv-pro-yegipetski-piramidi.jpg">
+         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhO6MS98M3WWzYvZPNMBAeBQAEkiQzkXIni-8J-5lTacwblzM-C0DrfyWJONvfmQQu1ik-akNvLFTTyuA-m7YbgwhMqM7O2kWDTVmiSDqOjBM6Tyv6LPxEb-GSxiR-yMHnyhukVFx0ZkR8/s1600/19.jpg">
                 <p style="font-size:24px">це проєктна робота на тему чотрикутники Котика Василя Учня 8-В класу</p>
 
                 
